[gd_scene load_steps=3 format=3 uid="uid://lobby001"]

[ext_resource type="Script" path="res://scripts/lobby/lobby.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/bg_text_flow.gd" id="bg_text_flow"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.93, 0.88, 1)

[node name="TextFlow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("bg_text_flow")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "LOBBY"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Player Name:"
theme_override_font_sizes/font_size = 18

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 22
placeholder_text = "Enter your name..."
max_length = 20

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CreateButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 20
text = "Create Room"

[node name="RefreshButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 20
text = "Refresh"

[node name="JoinRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RoomIdInput" type="LineEdit" parent="MarginContainer/VBox/JoinRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 22
placeholder_text = "Room ID"
max_length = 6

[node name="JoinButton" type="Button" parent="MarginContainer/VBox/JoinRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 55)
theme_override_font_sizes/font_size = 20
text = "Join"

[node name="RoomListLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Available Rooms:"
theme_override_font_sizes/font_size = 20

[node name="RoomListScroll" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="RoomList" type="VBoxContainer" parent="MarginContainer/VBox/RoomListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NoRoomsLabel" type="Label" parent="MarginContainer/VBox/RoomListScroll/RoomList"]
layout_mode = 2
text = "No rooms available"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
modulate = Color(0.55, 0.53, 0.5, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.85, 0.2, 0.2, 1)
horizontal_alignment = 1
autowrap_mode = 2
